Starting on demo section
-- Using prismjs and Twitter Bootstrap

--- a/test/jq-element-revealer.html
+++ b/test/jq-element-revealer.html
@@ -21,7 +21,7 @@
   <div id="qunit-fixture">
     <span>lame test markup</span>
     <span>normal test markup</span>
-    <span>jqElementRevealer test markup</span>
+    <span>jqReveal test markup</span>
   </div>
 </body>
 </html>
