--- a/src/demo/radios.html
+++ b/src/demo/radios.html
@@ -7,11 +7,12 @@
   <body role="document">
   <!--(bake includes/main-nav.html radios="true")-->
 
+
     <div class="container theme-showcase" role="main">
 
       <section class="dp-se">
         <div class="page-header">
-          <h1>Examples :: Radios</h1>
+          <h1>Example :: Radios</h1>
         </div>
         <div class="bs-callout bs-callout-info">
           <div class="pd-delegate-hook">
@@ -19,35 +20,45 @@
               <a href="#nogo" class="pd-publisher" data-pd-publish-events="/example/showcode/">Code Samples</a>
             </small>
             <h4>The Publishers</h4>
-            <p>These buttons control the paragraphs below. Click them and see the subscribers react.<br/>
-            <small>The buttons will publish a single event with a single value. It is the subsribers who listen for the event and the values that will make them show / hide.</small></p>
-
+            <p>These radio buttons control the paragraphs below. Click them and see the subscribers react.<br/>
+            <small>The radio buttons will publish a single event with a single value. It is the subsribers who listen for the event and the values that will make them show / hide.</small></p>
             <div class="pd-subscriber" data-pd-subscribe-events="/example/showcode/">
-            <!-- SAMPLE PUBLISERS HERE -->
-              <button type="button" class="btn btn-sm btn-default pd-publisher"
-                    data-pd-publish-events="/buttons/event/" data-pd-publish-value="button.attr.val1">button.attr.val1</button>
 
-              <div class="form-group pd-subscriber" data-pd-subscribe-events="/example/showcode/">
-                <label>Sex</label>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" class="pd-publisher">
-                    Male
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                    Female
-                  </label>
-                </div>
-                <p class="help-block">Lorem ipsum dolor sit amet</p>
-              </div>
+
+              <label class="checkbox-inline">
+                <input type="radio" name="radios" class="pd-publisher"
+                  data-pd-publish-events="/radio/events/" value="radio.attr.val1" /> radio.attr.val1
+              </label>
+
+              <label class="checkbox-inline">
+                <input type="radio" name="radios" class="pd-publisher"
+                  data-pd-publish-events="/radio/events/" value="radio.attr.val2" /> radio.attr.val2
+              </label>
+
+              <label class="checkbox-inline">
+                <input type="radio" name="radios" class="pd-publisher"
+                  data-pd-publish-events="/radio/events/" value="radio.attr.val3" /> radio.attr.val3
+              </label>
+
+              <label class="checkbox-inline">
+                <input type="radio" name="radios" class="pd-publisher"
+                  data-pd-publish-events="/radio/events/" value="radio.attr.val4" /> radio.attr.val4
+              </label>
 
             </div>
             <pre style="display:none;" class="pd-subscriber language-markup" data-pd-subscribe-events="/example/showcode/"><code>
 &lt;!-- Publishers --&gt;
-<!-- EXMAPLE PUBLISHER CODE -->
+&lt;div class=&quot;pd-delegate-hook&quot;&gt;
+  &lt;label&gt;
+    &lt;input type=&quot;radio&quot; name=&quot;radios&quot; class=&quot;pd-publisher&quot;
+      data-pd-publish-events=&quot;/radio/events/&quot; value=&quot;radio.attr.val1&quot; /&gt; radio.attr.val1
+  &lt;/label&gt;
+
+  &lt;label&gt;
+    &lt;input type=&quot;radio&quot; name=&quot;radios&quot; class=&quot;pd-publisher&quot;
+      data-pd-publish-events=&quot;/radio/events/&quot; value=&quot;radio.attr.val2&quot; /&gt; radio.attr.val2
+  &lt;/label&gt;
+&lt;/div&gt;
           </code></pre>
 
           </div>
@@ -58,18 +69,39 @@
           <h4>The Subscibers</h4>
           <p>These sections are shown by default. Simply becuase there is no hidden style applied.</p>
           <div class="pd-subscriber demo-divs" data-pd-subscribe-events="/example/showcode/">
-
-            <!-- EXAMPLE SUBSCRIBERS -->
-            <div class="pd-subscriber" data-pd-subscribe-events="/buttons/event/" data-pd-subscribe-values="button.attr.val1">
+            <div class="pd-subscriber" data-pd-subscribe-events="/radio/events/" data-pd-subscribe-values="radio.attr.val1">
               <h5>Section 1</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
 
+            <div class="pd-subscriber" data-pd-subscribe-events="/radio/events/" data-pd-subscribe-values="radio.attr.val2">
+              <h5>Section 2</h5>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
+            </div>
 
+            <div class="pd-subscriber" data-pd-subscribe-events="/radio/events/" data-pd-subscribe-values="radio.attr.val1|radio.attr.val3">
+              <h5>Section 3</h5>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
+            </div>
+
+            <div class="pd-subscriber" data-pd-subscribe-events="/radio/events/" data-pd-subscribe-values="radio.attr.val3|radio.attr.val4">
+              <h5>Section 4</h5>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
+            </div>
           </div>
           <pre style="display:none;" class="pd-subscriber language-markup" data-pd-subscribe-events="/example/showcode/"><code>
 &lt;!-- Subscribers --&gt;
-<!-- EXAMPLE SUBSCRIBERS -->
+&lt;div class=&quot;pd-subscriber&quot;
+        data-pd-subscribe-events=&quot;/radio/events/&quot;
+        data-pd-subscribe-values=&quot;radio.attr.val1&quot;&gt;
+  ...Single event, single value
+&lt;/div&gt;
+
+&lt;div class=&quot;pd-subscriber&quot;
+        data-pd-subscribe-events=&quot;/radio/events/&quot;
+        data-pd-subscribe-values=&quot;radio.attr.val2|radio.attr.val3&quot;&gt;
+  ...Single event, multiple values
+&lt;/div&gt;
 
 </code></pre>
         </div>
@@ -77,6 +109,7 @@
 
     </div> <!-- /container -->
 
-    <!--(bake includes/scripts.html)-->
+
+        <!--(bake includes/scripts.html)-->
   </body>
 </html>
