--- a/test/jq-element-revealer-buttons.html
+++ b/test/jq-element-revealer-buttons.html
@@ -9,25 +9,16 @@
   <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" media="screen">
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
   <!-- Load local lib and tests. -->
-  <script src="../dist/jquery.jq-element-revealer.min.js"></script>
-  <script src="jq-element-revealer_core.js"></script>
+  <script src="../src/jq-element-revealer.js"></script>
+  <script src="jq-element-revealer_buttons.js"></script>
   <!-- Removing access to jQuery and $. But it'll still be available as _$, if
        you REALLY want to mess around with jQuery in the console. REMEMBER WE
        ARE TESTING A PLUGIN HERE, THIS HELPS ENSURE BEST PRACTICES. REALLY. -->
   <script>window._$ = jQuery.noConflict(true);</script>
 </head>
-
 <body>
-  <h1 id="qunit-header">jQuery Grunt Test Test Suite</h1>
-  <h2 id="qunit-banner"></h2>
-  <div id="qunit-testrunner-toolbar"></div>
-  <h2 id="qunit-userAgent"></h2>
-  <ol id="qunit-tests"></ol>
-  <div id="qunit-fixture">
-
-    <p>
-      3 wolf moon keytar mixtape seitan whatever,fixie <b>retro</b> readymade irony four loko blog. mcsweeney's skateboard VHS hoodie tumblr master cleanse vice organic keffiyeh. Scenester echo park  banksy. Scenester 8-bit mustache, lo-fi mlkshk wolf <b>readymade</b> tumblr craft beer cosby sweater fap artisan fixie.
-    </p>
+  <div id="qunit"></div>
+  <div class="pd-delegate-hook">
 
   </div>
 </body>
