--- a/test/jq-element-revealer.html
+++ b/test/jq-element-revealer.html
@@ -9,12 +9,8 @@
   <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" media="screen">
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
   <!-- Load local lib and tests. -->
-  <script src="../dist/jquery.jq-element-revealer.min.js"></script>
+  <script src="../src/jq-element-revealer.js"></script>
   <script src="jq-element-revealer_core.js"></script>
-  <!-- Removing access to jQuery and $. But it'll still be available as _$, if
-       you REALLY want to mess around with jQuery in the console. REMEMBER WE
-       ARE TESTING A PLUGIN HERE, THIS HELPS ENSURE BEST PRACTICES. REALLY. -->
-  <script>window._$ = jQuery.noConflict(true);</script>
 </head>
 
 <body>
