Using CDN in tests

--- a/test/jq-element-revealer.html
+++ b/test/jq-element-revealer.html
@@ -4,10 +4,13 @@
   <meta charset="utf-8">
   <title>jQuery Element Revealer Test Suite</title>
   <!-- Load local jQuery. -->
-  <script src="../bower_components/jquery/jquery.min.js"></script>
+  <!-- <script src="../bower_components/jquery/jquery.min.js"></script> -->
+  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
   <!-- Load local QUnit. -->
-  <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" media="screen">
-  <script src="../bower_components/qunit/qunit/qunit.js"></script>
+  <!-- <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" media="screen"> -->
+  <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.15.0.css" media="screen">
+  <!-- <script src="../bower_components/qunit/qunit/qunit.js"></script> -->
+  <script src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
   <!-- Load local lib and tests. -->
   <script src="../src/jq-element-revealer.js"></script>
   <script src="jq-element-revealer_core.js"></script>
