--- a/src/demo/radios.html
+++ b/src/demo/radios.html
@@ -15,48 +15,48 @@
           <h1>Example :: Radios</h1>
         </div>
         <div class="bs-callout bs-callout-info">
-          <div class="pd-delegate-hook">
+          <div class="jqr-delegate-hook">
             <small class="pull-right">
-              <a href="#nogo" class="pd-publisher" data-pd-publish-events="/example/showcode/">Code Samples</a>
+              <a href="#nogo" class="jqr-publisher" data-jqr-publish-events="/example/showcode/">Code Samples</a>
             </small>
             <h4>The Publishers</h4>
             <p>These radio buttons control the paragraphs below. Click them and see the subscribers react.<br/>
             <small>The radio buttons will publish a single event with a single value. It is the subsribers who listen for the event and the values that will make them show / hide.</small></p>
-            <div class="pd-subscriber" data-pd-subscribe-events="/example/showcode/">
+            <div class="jqr-subscriber" data-jqr-subscribe-events="/example/showcode/">
 
 
               <label class="checkbox-inline">
-                <input type="radio" name="radios" class="pd-publisher"
-                  data-pd-publish-events="/radio/events/" value="radio.attr.val1" /> radio.attr.val1
+                <input type="radio" name="radios" class="jqr-publisher"
+                  data-jqr-publish-events="/radio/events/" value="radio.attr.val1" /> radio.attr.val1
               </label>
 
               <label class="checkbox-inline">
-                <input type="radio" name="radios" class="pd-publisher"
-                  data-pd-publish-events="/radio/events/" value="radio.attr.val2" /> radio.attr.val2
+                <input type="radio" name="radios" class="jqr-publisher"
+                  data-jqr-publish-events="/radio/events/" value="radio.attr.val2" /> radio.attr.val2
               </label>
 
               <label class="checkbox-inline">
-                <input type="radio" name="radios" class="pd-publisher"
-                  data-pd-publish-events="/radio/events/" value="radio.attr.val3" /> radio.attr.val3
+                <input type="radio" name="radios" class="jqr-publisher"
+                  data-jqr-publish-events="/radio/events/" value="radio.attr.val3" /> radio.attr.val3
               </label>
 
               <label class="checkbox-inline">
-                <input type="radio" name="radios" class="pd-publisher"
-                  data-pd-publish-events="/radio/events/" value="radio.attr.val4" /> radio.attr.val4
+                <input type="radio" name="radios" class="jqr-publisher"
+                  data-jqr-publish-events="/radio/events/" value="radio.attr.val4" /> radio.attr.val4
               </label>
 
             </div>
-            <pre style="display:none;" class="pd-subscriber language-markup" data-pd-subscribe-events="/example/showcode/"><code>
+            <pre style="display:none;" class="jqr-subscriber language-markup" data-jqr-subscribe-events="/example/showcode/"><code>
 &lt;!-- Publishers --&gt;
-&lt;div class=&quot;pd-delegate-hook&quot;&gt;
+&lt;div class=&quot;jqr-delegate-hook&quot;&gt;
   &lt;label&gt;
-    &lt;input type=&quot;radio&quot; name=&quot;radios&quot; class=&quot;pd-publisher&quot;
-      data-pd-publish-events=&quot;/radio/events/&quot; value=&quot;radio.attr.val1&quot; /&gt; radio.attr.val1
+    &lt;input type=&quot;radio&quot; name=&quot;radios&quot; class=&quot;jqr-publisher&quot;
+      data-jqr-publish-events=&quot;/radio/events/&quot; value=&quot;radio.attr.val1&quot; /&gt; radio.attr.val1
   &lt;/label&gt;
 
   &lt;label&gt;
-    &lt;input type=&quot;radio&quot; name=&quot;radios&quot; class=&quot;pd-publisher&quot;
-      data-pd-publish-events=&quot;/radio/events/&quot; value=&quot;radio.attr.val2&quot; /&gt; radio.attr.val2
+    &lt;input type=&quot;radio&quot; name=&quot;radios&quot; class=&quot;jqr-publisher&quot;
+      data-jqr-publish-events=&quot;/radio/events/&quot; value=&quot;radio.attr.val2&quot; /&gt; radio.attr.val2
   &lt;/label&gt;
 &lt;/div&gt;
           </code></pre>
@@ -68,38 +68,38 @@
         <div class="bs-callout bs-callout-info">
           <h4>The Subscibers</h4>
           <p>These sections are shown by default. Simply becuase there is no hidden style applied.</p>
-          <div class="pd-subscriber demo-divs" data-pd-subscribe-events="/example/showcode/">
-            <div class="pd-subscriber" data-pd-subscribe-events="/radio/events/" data-pd-subscribe-values="radio.attr.val1">
+          <div class="jqr-subscriber demo-divs" data-jqr-subscribe-events="/example/showcode/">
+            <div class="jqr-subscriber" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val1">
               <h5>Section 1</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
 
-            <div class="pd-subscriber" data-pd-subscribe-events="/radio/events/" data-pd-subscribe-values="radio.attr.val2">
+            <div class="jqr-subscriber" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val2">
               <h5>Section 2</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
 
-            <div class="pd-subscriber" data-pd-subscribe-events="/radio/events/" data-pd-subscribe-values="radio.attr.val1|radio.attr.val3">
+            <div class="jqr-subscriber" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val1|radio.attr.val3">
               <h5>Section 3</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
 
-            <div class="pd-subscriber" data-pd-subscribe-events="/radio/events/" data-pd-subscribe-values="radio.attr.val3|radio.attr.val4">
+            <div class="jqr-subscriber" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val3|radio.attr.val4">
               <h5>Section 4</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
           </div>
-          <pre style="display:none;" class="pd-subscriber language-markup" data-pd-subscribe-events="/example/showcode/"><code>
+          <pre style="display:none;" class="jqr-subscriber language-markup" data-jqr-subscribe-events="/example/showcode/"><code>
 &lt;!-- Subscribers --&gt;
-&lt;div class=&quot;pd-subscriber&quot;
-        data-pd-subscribe-events=&quot;/radio/events/&quot;
-        data-pd-subscribe-values=&quot;radio.attr.val1&quot;&gt;
+&lt;div class=&quot;jqr-subscriber&quot;
+        data-jqr-subscribe-events=&quot;/radio/events/&quot;
+        data-jqr-subscribe-values=&quot;radio.attr.val1&quot;&gt;
   ...Single event, single value
 &lt;/div&gt;
 
-&lt;div class=&quot;pd-subscriber&quot;
-        data-pd-subscribe-events=&quot;/radio/events/&quot;
-        data-pd-subscribe-values=&quot;radio.attr.val2|radio.attr.val3&quot;&gt;
+&lt;div class=&quot;jqr-subscriber&quot;
+        data-jqr-subscribe-events=&quot;/radio/events/&quot;
+        data-jqr-subscribe-values=&quot;radio.attr.val2|radio.attr.val3&quot;&gt;
   ...Single event, multiple values
 &lt;/div&gt;
 
