Tweaks, features, updated

--- a/src/demo/radios.html
+++ b/src/demo/radios.html
@@ -11,43 +11,41 @@
     <div class="container theme-showcase" role="main">
       <!--(bake includes/example-nav.html radios="true")-->
       <section class="dp-se">
-        <div class="page-header">
-          <h1>Examples :: Radios</h1>
-        </div>
         <div class="bs-callout bs-callout-info">
           <div class="jqr-delegate-hook">
             <!--(bake includes/code-samples-link.html)-->
-            <h4>The Publishers</h4>
-            <!--(bake includes/demo-intros.html radiosdemo="true")-->
-
+            <h4>Click the RADIO Publishers</h4>
             <div class="jqr-subscriber" data-jqr-subscribe-events="/example/showcode/">
               <!--(bake includes/publisher-templates.html radiosdemo="true")-->
             </div>
+
+            <!--(bake includes/demo-intros.html radiosdemo="true")-->
+
 <!--(bake includes/publisher-code-snippets.html radiosdemo="true")-->
           </div>
         </div>
 
 
         <div class="bs-callout bs-callout-info">
-          <h4>The Subscibers</h4>
+          <h4>Subscibers</h4>
           <!--(bake includes/subscriber-intro.html)-->
           <div class="jqr-subscriber demo-divs" data-jqr-subscribe-events="/example/showcode/">
-            <div class="jqr-subscriber" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val1">
+            <div class="jqr-subscriber example-1" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val1">
               <h5>Section 1</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
 
-            <div class="jqr-subscriber" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val2">
+            <div class="jqr-subscriber example-2" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val2">
               <h5>Section 2</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
 
-            <div class="jqr-subscriber" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val1|radio.attr.val3">
+            <div class="jqr-subscriber example-3" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val1|radio.attr.val3">
               <h5>Section 3</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
 
-            <div class="jqr-subscriber" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val3|radio.attr.val4">
+            <div class="jqr-subscriber example-4" data-jqr-subscribe-events="/radio/events/" data-jqr-subscribe-values="radio.attr.val3|radio.attr.val4">
               <h5>Section 4</h5>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nobis accusamus corporis, repellendus esse possimus numquam est deleniti vero laudantium in, facilis nisi ratione beatae, nostrum reprehenderit labore tempore? Quam!
             </div>
