--- a/src/demo/publishers.html
+++ b/src/demo/publishers.html
@@ -13,6 +13,7 @@
       <section class="dp-se">
         <div class="page-header">
           <h1>Publishers</h1>
+          <p>More coming soon. Check out the <a href="/dist/demo/buttons.html">examples</a></p>
         </div>
 
       </section>
